2004-08-24  Per Bothner  <per@bothner.com>

	* OutPort.java (openFile): New static method.

2004-08-14  Per Bothner  <per@bothner.com>

	* CallFrame.java:  Remove unused class.

2004-08-06  Per Bothner  <per@bothner.com>

	* Procedure.java:  New API, especially for --full-tailcalls.
	(apply):  New static method.  Old apply calls new static.
	(match0, match1, match2, match3, match4, matchN):  New methods.
	(check0, check1, check2, check3, check4, checkN):  New methods.
	* MethodProc.java (match, applyV):  Remove methods.
	(apply(CallContext)):  Remove method - use the inherited method.
	(applyN):  Update to use checkN instead of removed match+applyV.
	* CallContext.java:  No longer implement Runnable.
	(run):  Remove method.
	(pc):  New field.
	(getRestArgsArray, getRestArgsList):  Take start parameter.
	(setArgs[5 methods], setArgsN):  Remove methods.
	(getArgs):  Reset next to 0.
	* CpsMethodContainer.java:  Remove interface.
	* CpsMethodProc.java:  Remove class.
	* Makefile.am:  Update accordingly.
	* CallFrame.java:  No longer implement CpsMethodContainer.

2004-08-06  Per Bothner  <per@bothner.com>

	* WrappedException.java (<init>):  Add default constructor.
	* WrongType.java (number):  Change to 1-origin.
	(typeExpected):  Renamed to expectedType and chaned to Object,
	(argValue):  New field.
	(<init>):  New constructors that also set argValue.
	(getMessage):  Add more information.

2004-08-03  Per Bothner  <per@bothner.com>

	* CpsMethodProc.java:  Remove no-longer-used class.
	* Makefile.am (java_sources): Remove CpsProcedure.java, CallFrame.java.
	* CpsMethodProc.java:  Extend MethodProc instead of CpsProcedure.
	* CallFrame.java:  Likewise.

	* MethodProc.java:  Merge functionality from CpsProcedure.
	* CpsProcedure.java:  Now just a stub, soon to be removed.

	* ApplyMethodContainer.java:  Remove no-longer-used interface.
	* ApplyMethodProc.java:  Remove no-longer-used class.
	* Makefile.am:  Update accordingly.
